Add form and function to POST unsorted string to server

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "charsorter",
   "version": "1.0.0",
   "description": "string sorter",
-  "main": "index.js",
+  "main": "client/index.html",
   "scripts": {
     "test": "test"
   },
